Them folder donut, pho, spagetti

--- a/index.html
+++ b/index.html
@@ -8,6 +8,14 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <h2>
+        <ul>
+            <li><a href="./recipes/pho/pho.html">Pho</a></li>
+            <li><a href="./recipes/spagetti/spagetti.html">Spagetti</a></li>
+            <li><a href="./recipes/donut muffins/donut.html">Donut muffins</a></li>
+
+
+    </ul></h2>
     
 </body>
 </html>
