Add Pho recipes

--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <img src="./Images index/chef.jpg" alt="cheft">
     <h2>
         <ul>
             <li><a href="./recipes/pho/pho.html">Pho</a></li>
-            <li><a href="./recipes/spagetti/spagetti.html">Spagetti</a></li>
-            <li><a href="./recipes/donut muffins/donut.html">Donut muffins</a></li>
+            <img src="./Images index/pho.jpg" alt="Pho">
+            <li><a href="./recipes/spaghetti/spaghetti.html">Spaghetti</a></li>
+            <img src="./Images index/Spaghetti.jpg" alt="Spaghetti">
+            <li><a href="./recipes/donut muffins/donut.html">Donut Muffins</a></li>
+            <img src="./Images index/donut.jpeg" alt="Donut Muffins">
 
 
     </ul></h2>
