Add recipe Spaghetti

--- a/recipes/pho/pho.html
+++ b/recipes/pho/pho.html
@@ -8,9 +8,9 @@
 </head>
 <body>
     <h1>Pho</h1>
-    <img src="./Pho heading.png" alt="Pho heading">
+    <img width="500px" src="./Pho heading.png" alt="Pho heading">
     <h2>Description</h2>
-    <p>Authentic, Vietnamese pho soup is all about the broth! Beef bones, fish sauce, star anise, and ginger simmer for at least 6 hours, creating a complex, aromatic broth that may not be quick, but it's certainly delicious. The flavorful broth is ladled over rice noodles and thinly sliced beef and topped with fresh garnishes.</p>
+    <p>Authentic, <strong>Vietnamese pho soup</strong> is all about the broth! Beef bones, fish sauce, star anise, and ginger simmer for at least 6 hours, creating a complex, aromatic broth that may not be quick, but it's certainly delicious. The flavorful broth is ladled over rice noodles and thinly sliced beef and topped with fresh garnishes.</p>
     <p>Craving warm, comforting pho? Well, then let us introduce you to the tastiest pho recipe on the internet. The key to this authentic Vietnamese soup is the flavorful broth that simmers for at least six hours before serving over rice noodles.</p> 
     <p>We promise, this soup is so worth the wait.</p>   
     <h2>Pho Ingredients</h2>
