--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
-    <img src="./Images index/chef.jpg" alt="cheft">
+    <h1>Welcome to Odin Recipes</h1>
+    <img width="500px" src="./Images index/chef.jpg" alt="cheft">
     <h2>
         <ul>
             <li><a href="./recipes/pho/pho.html">Pho</a></li>
-            <img src="./Images index/pho.jpg" alt="Pho">
+            <img width="500px" src="./Images index/pho.jpg" alt="Pho">
             <li><a href="./recipes/spaghetti/spaghetti.html">Spaghetti</a></li>
-            <img src="./Images index/Spaghetti.jpg" alt="Spaghetti">
+            <img width="500px" src="./Images index/Spaghetti.jpg" alt="Spaghetti">
             <li><a href="./recipes/donut muffins/donut.html">Donut Muffins</a></li>
-            <img src="./Images index/donut.jpeg" alt="Donut Muffins">
+            <img width="500px" src="./Images index/donut.jpeg" alt="Donut Muffins">
 
 
     </ul></h2>
