Add recipe donut

--- a/recipes/donut muffins/donut.html
+++ b/recipes/donut muffins/donut.html
@@ -1,12 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Donut Muffins</title>
-</head>
-<body>
-    
-</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Donut Muffins</title>
+    </head>
+    <body>
+        <h1>Donut Muffins</h1>
+        <img width="500px" src="./donut muffin heading.jpg" alt="Donut Muffin">
+        <h2>Description</h2>
+        <p>These mini <strong>donut muffins</strong> with a secret ingredient of nutmeg taste just like cinnamon-sugar donut holes!        </p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>½ cup white sugar</li>
+            <li>¼ cup margarine, melted</li>
+            <li>¾ teaspoon ground nutmeg</li>
+            <li>½ cup milk</li>
+            <li>1 cup all-purpose flour</li>
+            <li>1 teaspoon baking powder</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Preheat the oven to 375 degrees F (190 degrees C). Grease a 24-cup mini muffin tin.</li>
+            <li>Make the muffins: Mix sugar, margarine, and nutmeg together in a large bowl. Stir in milk, then mix in flour and baking powder until just combined. Spoon batter into the prepared muffin cups, filling each 1/2 full.</li>
+            <li>Bake in the preheated oven until the tops are light golden brown, 15 to 20 minutes. Remove from the oven and transfer to a wire rack.</li>
+            <li>Immediately place melted margarine in a bowl, and mix sugar and cinnamon together in another bowl.</li>
+            <li>Dip the top of each warm muffin in melted margarine, then dip in sugar mixture to coat. Let cool for 10 minutes before serving.</li>
+        </ol>
+    </body>
 </html>
