Add css to odin-recipes

--- a/index.html
+++ b/index.html
@@ -5,20 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>Welcome to Odin Recipes</h1>
-    <img width="500px" src="./Images index/chef.jpg" alt="cheft">
+    <img class="imgbody" src="./Images index/chef.jpg" alt="cheft">
     <h2>
         <ul>
             <li><a href="./recipes/pho/pho.html">Pho</a></li>
-            <img width="500px" src="./Images index/pho.jpg" alt="Pho">
+            <img class="imgrecipe" src="./Images index/pho.jpg" alt="Pho">
             <li><a href="./recipes/spaghetti/spaghetti.html">Spaghetti</a></li>
-            <img width="500px" src="./Images index/Spaghetti.jpg" alt="Spaghetti">
+            <img class="imgrecipe" src="./Images index/Spaghetti.jpg" alt="Spaghetti">
             <li><a href="./recipes/donut muffins/donut.html">Donut Muffins</a></li>
-            <img width="500px" src="./Images index/donut.jpeg" alt="Donut Muffins">
-
-
+            <img class="imgrecipe" src="./Images index/donut.jpeg" alt="Donut Muffins">
     </ul></h2>
     
 </body>
