--- a/recipes/donut muffins/donut.html
+++ b/recipes/donut muffins/donut.html
@@ -3,13 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <title>Donut Muffins</title>
-    </head>
+        <link rel="stylesheet" href="../../style.css">
     <body>
         <h1>Donut Muffins</h1>
-        <img width="500px" src="./donut muffin heading.jpg" alt="Donut Muffin">
+        <img class="imgrecipe" src="./donut muffin heading.jpg" alt="Donut Muffin">
         <h2>Description</h2>
-        <p>These mini <strong>donut muffins</strong> with a secret ingredient of nutmeg taste just like cinnamon-sugar donut holes!        </p>
+        <div class="one">
+        <p>These mini <strong>donut muffins</strong> with a secret ingredient of nutmeg taste just like cinnamon-sugar donut holes!</p>
+        </div>
         <h2>Ingredients</h2>
+        <div class="two">
         <ul>
             <li>½ cup white sugar</li>
             <li>¼ cup margarine, melted</li>
@@ -18,7 +21,9 @@
             <li>1 cup all-purpose flour</li>
             <li>1 teaspoon baking powder</li>
         </ul>
+        </div>
         <h2>Steps</h2>
+        <div class="three">
         <ol>
             <li>Preheat the oven to 375 degrees F (190 degrees C). Grease a 24-cup mini muffin tin.</li>
             <li>Make the muffins: Mix sugar, margarine, and nutmeg together in a large bowl. Stir in milk, then mix in flour and baking powder until just combined. Spoon batter into the prepared muffin cups, filling each 1/2 full.</li>
@@ -26,5 +31,6 @@
             <li>Immediately place melted margarine in a bowl, and mix sugar and cinnamon together in another bowl.</li>
             <li>Dip the top of each warm muffin in melted margarine, then dip in sugar mixture to coat. Let cool for 10 minutes before serving.</li>
         </ol>
+        </div>
     </body>
 </html>
