--- a/recipes/pho/pho.html
+++ b/recipes/pho/pho.html
@@ -5,30 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pho</title>
+    <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     <h1>Pho</h1>
-    <img width="500px" src="./Pho heading.png" alt="Pho heading">
+    <img class="imgrecipe" src="./Pho heading.png" alt="Pho heading">
     <h2>Description</h2>
-    <p>Authentic, <strong>Vietnamese pho soup</strong> is all about the broth! Beef bones, fish sauce, star anise, and ginger simmer for at least 6 hours, creating a complex, aromatic broth that may not be quick, but it's certainly delicious. The flavorful broth is ladled over rice noodles and thinly sliced beef and topped with fresh garnishes.</p>
-    <p>Craving warm, comforting pho? Well, then let us introduce you to the tastiest pho recipe on the internet. The key to this authentic Vietnamese soup is the flavorful broth that simmers for at least six hours before serving over rice noodles.</p> 
-    <p>We promise, this soup is so worth the wait.</p>   
+    <div class="one">
+        <p>Authentic, <strong>Vietnamese pho soup</strong> is all about the broth! Beef bones, fish sauce, star anise, and ginger simmer for at least 6 hours, creating a complex, aromatic broth that may not be quick, but it's certainly delicious. The flavorful broth is ladled over rice noodles and thinly sliced beef and topped with fresh garnishes.</p>
+        <p>Craving warm, comforting pho? Well, then let us introduce you to the tastiest pho recipe on the internet. The key to this authentic Vietnamese soup is the flavorful broth that simmers for at least six hours before serving over rice noodles.</p> 
+        <p>We promise, this soup is so worth the wait.</p>   
+    </div>
     <h2>Pho Ingredients</h2>
-    <ul>
-        <li>Beef Soup Bones</li>
-        <li>Rice Noodles</li>
-        <li>Beef</li>
-        <li>Fish Sauce</li>
-        <li>Onion</li>
-        <li>Spices and Seasonings</li>
-        <li>Garnishes</li>
-    </ul>
+    <div class="two">
+        <ul>
+            <li>Beef Soup Bones</li>
+            <li>Rice Noodles</li>
+            <li>Beef</li>
+            <li>Fish Sauce</li>
+            <li>Onion</li>
+            <li>Spices and Seasonings</li>
+            <li>Garnishes</li>
+        </ul>
+    </div>
     <h2>Steps</h2>
-    <ol>
-        <li>Roast Bones and Onion: Roast the beef bones and onions until the bones are browned and the onions are soft.</li>
-        <li>Make the Broth: Combine roasted beef bones, roasted onions, ginger, salt, star anise, fish sauce, and water in a large stockpot. Allow to simmer for 6 to 10 hours. Then, strain the broth into a new saucepan.</li>
-        <li>Soak the Rice Noodles: Allow dry rice noodles to soak for 1 hour. While they're soaking, bring broth to a simmer.</li>
-        <li>Cook the Rice Noodles: Cook the rice noodles in boiling water. Drain and add noodles to a bowl topped with sirloin, cilantro, green onion, and broth. Garnish with your desired toppings.</li>
-    </ol>
+    <div class="three">
+        <ol>
+            <li>Roast Bones and Onion: Roast the beef bones and onions until the bones are browned and the onions are soft.</li>
+            <li>Make the Broth: Combine roasted beef bones, roasted onions, ginger, salt, star anise, fish sauce, and water in a large stockpot. Allow to simmer for 6 to 10 hours. Then, strain the broth into a new saucepan.</li>
+            <li>Soak the Rice Noodles: Allow dry rice noodles to soak for 1 hour. While they're soaking, bring broth to a simmer.</li>
+            <li>Cook the Rice Noodles: Cook the rice noodles in boiling water. Drain and add noodles to a bowl topped with sirloin, cilantro, green onion, and broth. Garnish with your desired toppings.</li>
+        </ol>
+    </div>
 </body>
 </html>
