--- a/recipes/spaghetti/spaghetti.html
+++ b/recipes/spaghetti/spaghetti.html
@@ -5,13 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spaghetti</title>
+    <link rel="stylesheet" href="../../style.css">
 </head>
 <body>
     <h1>Spaghetti</h1>
-    <img width="500px" src="./spaghetti heading.jpeg" alt="Spaghetti">
+    <img class="imgrecipe" src="./spaghetti heading.jpeg" alt="Spaghetti">
     <h2>Description</h2>
+    <div class="one">
     <p><strong>Carbonara</strong> is made with guanciale (cured pork), eggs, Pecorino Romano cheese, spaghetti pasta, and lots of black pepper. Italians don't add extra ingredients like cream, milk, garlic, or onions. Try this recipe if you want to make an authentic, creamy carbonara that comes straight from Italy, where I live. Buon appetito!</p>
+</div>
     <h2>Ingredients</h2>
+
+    <div class="two">
     <ul>
         <li>Oil</li>
         <li>Guanciale</li>
@@ -20,7 +25,9 @@
         <li>Cheese</li>
         <li>Seasonings</li>
     </ul>
+</div>
     <h2>Steps</h2>
+    <div class="three">
     <ol>
         <li>Cook the pork in olive oil until browned and crispy, then drain on paper towels.</li>
         <li>Boil the spaghetti in salted water. Drain and return to the pot. Let cool.</li>
@@ -28,5 +35,6 @@
         <li>Pour the egg mixture over the pasta, stirring quickly, until creamy.</li>
         <li>Stir in the pork, then top with the remaining cheese and more black pepper.</li>
     </ol>
+</div>
 </body>
 </html>
